refactor: hardened reset handling so session exchange now required refresh token and audit lookups have concrete row typing, expanded the guild role, cleaned up dashboard and member UI regressions by fixing invite toast interpolation and using actor display names.

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -10,8 +10,9 @@
     "resolveJsonModule": true,
     "outDir": "dist",
     "rootDir": "src",
-    "types": ["node"]
+    "types": ["node", "vitest/globals"]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
+
