--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.424.0",
     "next": "15.0.3",
     "next-themes": "^0.3.0",
