--- a/web/package.json
+++ b/web/package.json
@@ -29,7 +29,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.424.0",
-    "next": "15.0.3",
+    "next": "^15.0.3",
     "next-themes": "^0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
