--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-popover": "^1.1.0",
     "@radix-ui/react-select": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
@@ -44,6 +45,7 @@
     "@types/node": "^20.11.30",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
+    "@storybook/react": "^8.2.5",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-next": "15.0.3",
