--- a/web/package.json
+++ b/web/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-aspect-ratio": "^1.1.8",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-popover": "^1.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -42,10 +44,10 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@storybook/react": "^8.2.5",
     "@types/node": "^20.11.30",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
-    "@storybook/react": "^8.2.5",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-next": "15.0.3",
